--- a/two.css
+++ b/two.css
@@ -1,28 +1,91 @@
 .header {
-text-align: center;
-color:rgb(55, 231, 63);
--webkit-text-stroke: 2px rgb(251, 253, 251);
-font-size: 75px;
-background-color: black;
-margin-bottom: 0;
+  text-align: center;
+  color: rgb(55, 231, 63);
+  -webkit-text-stroke: 2px rgb(251, 253, 251);
+  font-size: 75px;
+  background-color: black;
+  margin-bottom: 0;
 }
 
 body {
-    background-color: rgb(231, 76, 20);
-
+  background-color: rgb(231, 76, 20);
 }
 .column {
-    float: left;
-    width: 33.33%;
-  }
+  float: left;
+  width: 33.33%;
+}
 
-  .column > img {
-    height: 500px;
-    width: 100%;
-  }
+.column > img {
+  height: 500px;
+  width: 100%;
+}
 
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.hoursP {
+  text-align: center;
+}
+
+.list {
+  margin: 0 auto;
+  width: 300px;
+}
+
+.bigfont {
+  font-weight: bold;
+  font-size: large;
+}
+
+h2 {
+  text-align: center;
+  font-weight: bold;
+  font-size: 40px;
+}
+
+#newsAndEvents {
+  border-style: solid;
+}
+
+
+.schedule {
+  list-style-type: none;
+  padding: 0;
+}
+
+.schedule-item {
+  border-bottom: 1px solid #ddd;
+  padding: 15px;
+  margin-bottom: 10px;
+  font-size: 1.5em;
+}
+
+.schedule-item:last-child {
+  border-bottom: none;
+}
+
+.schedule-item h2 {
+  font-size: 1.2em;
+  margin: 0;
+  color: #000000;
+}
+
+.schedule-item p {
+  margin: 5px 0;
+  font-size: 1em;
+  color: #000000;
+}
+
+.schedule-item span {
+  display: block;
+  font-weight: bold;
+  color: #000000;
+}
+
+.schedule-item .details {
+  /* font-size: 0.9em; */
+  color: #000000;
+}
