Tyler-added more touch ups to page

--- a/four.css
+++ b/four.css
@@ -3,7 +3,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: rgb(111, 218, 218);
+    font-size: 30px;
   }
 
   li {
@@ -47,3 +47,17 @@ ul {
     text-align: center;
 }
 
+.farmphoto {
+    display: flex;
+    justify-content: space-between;
+    
+    
+}
+
+.bar {
+    height: 230px;
+}
+
+.location {
+    text-align: center;
+}
