--- a/two.css
+++ b/two.css
@@ -5,6 +5,7 @@
   font-size: 75px;
   background-color: black;
   margin-bottom: 0;
+  margin-top: 0;
 }
 
 body {
@@ -88,4 +89,31 @@ h2 {
 .schedule-item .details {
   /* font-size: 0.9em; */
   color: #000000;
+}
+
+
+
+.navbar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #000000;
+}
+
+.navbar > li {
+  float: left;
+}
+
+.navbar > li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
 }
