--- a/five.css
+++ b/five.css
@@ -47,9 +47,27 @@ body {
 .header3 {
     color: white;
     text-align: center;
+    font-size: 75px;
 }
 
 .three {
     text-align: center;
     
+}
+
+#specialmovienights {
+    border-style: solid;
+    text-align: center;
+    font-size: 40px;
+    color: antiquewhite;
+}
+
+.schedule-item1 {
+    text-align: center;
+    border-style: solid;
+}
+
+.schedule-item2 {
+    text-align: center;
+    border-style: solid;
 }
